# yan

./: .gitignore  Cargo.toml  README.md  Rocket.toml  dev.bat  mason.js  pip-install.bat  pip-uninstall.bat  py-yan.bat  py-yan.py  requirements.txt  vetur.config.js  踩坑日记.md
.github/workflows/: build.yaml
res/: README.md
src/: lib.rs  main.rs
src/pe/: mod.rs
src/server/: mod.rs  web_server.rs
src/utils/: mod.rs
web_src/: .gitignore  .pnp.cjs  index.html  package.json  tsconfig.json  vite.config.js  关于梅森增益公式.md
web_src/src/: App.vue
web_src/src/components/: FunctionView.vue  HelloWorld.vue  MGFView.vue
web_src/src/components/basic/: D3View.vue  FuncView.vue  KatexView.vue  ThreeView.vue
